--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Challenge1</title>
-    <meta name="description" content="360&deg; Image - A-Frame">
- <!--     <script src="script/aframe-master.js"></script> 
-   <script src="scripts/main.js" defer></script>-->
+    <meta name="description" content="360&deg; Image - A-Frame"> 
+   <script src="../../../script/aframe-master.js"></script>
 
- 
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="scripts/main.js" defer></script>
+    <script src="script/main.js" defer></script>
   </head>
   <body>
   	
@@ -19,7 +17,7 @@
     <a-scene>
     	 <a-assets>
           <img id="panorama" src="images/pano2.jpg" />
-      </a-assets>
+         </a-assets>
       <a-sky src="pano2.jpg" rotation="0 -130 0"></a-sky>
     </a-scene>
   </body>
