--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="360&deg; Image - A-Frame"> 
    <script src="../../../script/aframe-master.js"></script>
 
+   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="script/main.js" defer></script>
@@ -18,7 +20,10 @@
     	 <a-assets>
           <img id="panorama" src="images/pano2.jpg" />
          </a-assets>
-      <a-sky src="pano2.jpg" rotation="0 -130 0"></a-sky>
+     
+        <a-sky src="#panorama"></a-sky>
+    </a-scene> 
+
     </a-scene>
   </body>
 </html>
