--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
     <title>Challenge1</title>
     <meta name="description" content="360&deg; Image - A-Frame"> 
    <script src="../../../script/aframe-master.js"></script>
-
-   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-
+ <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <meta name="viewport" content="width=device-width">
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="script/main.js" defer></script>
   </head>
   <body>
-  	
+  	      <a-assets>
+          <img id="panorama" src="images/panorama.jpg" />
+         </a-assets>
 
     <a-scene>
-    	 <a-assets>
-          <img id="panorama" src="images/pano2.jpg" />
-         </a-assets>
-     
         <a-sky src="#panorama"></a-sky>
     </a-scene> 
 
