--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   	      <a-assets>
-          <img id="panorama" src="images/panorama.jpg" />
+          <img id="panorama" src="images/pano.jpg" />
          </a-assets>
 
     <a-scene>
