--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="360&deg; Image - A-Frame"> 
    <script src="../../../script/aframe-master.js"></script>
    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-   <!--<meta name="viewport" content="width=device-width">-->
+   <meta name="viewport" content="width=device-width">
    <script src="script/main.js" defer></script>
   </head>
   <body>
