--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <body>
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
+          <a-entity id="mouseCursor"
+          cursor="fude:true; fuseTimeout:2000"> </a-entity>
+          <a-ring id="cursorRing"
+          position="0 0 -1"
+          radius-inner="0.03"
+          radius-outer="0.05"
+          material="color:#FFFFFF; shader: flat"
+          > </a-ring>
          </a-assets>
 
     <a-scene>
