--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
+           </a-assets>
+          
+          <a-camera>
           <a-entity id="mouseCursor"
           cursor="fude:true; fuseTimeout:2000"> </a-entity>
           <a-ring id="cursorRing"
@@ -21,7 +24,8 @@
           radius-outer="0.05"
           material="color:#FFFFFF; shader: flat"
           > </a-ring>
-         </a-assets>
+      </a-camera>
+        
 
     <a-scene>
         <a-sky src="#panorama"></a-sky>
