--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           
           <a-camera>
           <a-entity id="mouseCursor"
-          cursor="fude:true; fuseTimeout:2000"> </a-entity>
+          cursor="fuse:true; fuseTimeout:2000"> </a-entity>
           <a-ring id="cursorRing"
           position="0 0 -1"
           radius-inner="0.02"
