--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
   <a-scene>
   	      <a-assets>
-          <img id="panorama" src="images/pano.jpg" />
+          <img id="panorama" src="images/pano.jpg" position=fixed />
            </a-assets>
         
          <a-camera>  
