--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <body>
   <a-scene>
   	      <a-assets>
-          <img id="panorama" src="images/pano.jpg" position="0 0 0" />
+          <img id="panorama" src="images/pano.jpg" />
            </a-assets>
         
-         <a-camera>  
-          <a-entity id="mouseCursor"
+         <a-camera id="mouseCursor">  
+          <a-entity 
           cursor="fuse:true; fuseTimeout:2000"> </a-entity>
           <a-ring id="cursorRing"
           position="0 0 -1"
