--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <script src="script/main.js" defer></script>
   </head>
   <body>
-  <a-scene>
+  <a-scene background-image="images/pano.jpg">
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
            </a-assets>
@@ -30,7 +30,7 @@
         
       
       </a-camera>
-     <a-sky src="#panorama"></a-sky>
+     <!--<a-sky src="#panorama"></a-sky> -->
     </a-scene>
   </body>
 </html>
