--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
    <script src="script/main.js" defer></script>
   </head>
   <body>
-  <a-scene background-image="images/pano.jpg">
+  <a-scene >
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
            </a-assets>
-        
-         <a-camera >  
+           <div background-image="#panorama">
+          <a-camera >  
           <a-entity id="mouseCursor"
           cursor="fuse:true; fuseTimeout:2000"> </a-entity>
           <a-ring id="cursorRing"
