--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
    <script src="script/main.js" defer></script>
   </head>
   <body>
+   <div style="background-image:"#panorama";">
   <a-scene >
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
            </a-assets>
-           <div background-image="#panorama">
+          
           <a-camera >  
           <a-entity id="mouseCursor"
           cursor="fuse:true; fuseTimeout:2000"> </a-entity>
