--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
   <a-scene >
   	      <a-assets>
-          <img id="panorama" src="images/sky.png" />
+          <img id="panorama" src="images/pano.jpg" />
            </a-assets>
         
          <a-camera >  
