--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>Challenge1</title>
     <meta name="description" content="360&deg; Image - A-Frame"> 
-   
    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
    <meta name="viewport" content="width=device-width">
    <script src="script/main.js" defer></script>
@@ -13,7 +12,7 @@
   <body>
   <a-scene >
   	      <a-assets>
-          <img id="panorama" src="images/pano.jpg" />
+          <img id="panorama" src="images/sky.png" />
            </a-assets>
         
          <a-camera >  
