--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Challenge1</title>
-    <meta name="description" content="360&deg; Image - A-Frame"> 
-   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-   <meta name="viewport" content="width=device-width">
-   <script src="script/main.js" defer></script>
+        <meta charset="utf-8">
+    <title>Hello, WebVR! • A-Frame</title>
+    <meta name="viewport" content="width=device-width">
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
   <a-scene >
