--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
   <a-scene >
   	      <a-assets>
-          <img id="panorama" src="images/pano.png" />
+          <img id="panorama" src="images/pano.jpg" />
            </a-assets>
         
          <a-camera >  
