--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
         <meta charset="utf-8">
-    <title>Hello, WebVR! • A-Frame</title>
+    <title>Challenge 1 </title>
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
@@ -24,7 +24,11 @@
           material="color:#FFFFFF; shader: flat"
           > </a-ring>
       </a-camera>
+
      <a-sky src="#panorama"></a-sky>
+
+
+
     </a-scene>
   </body>
 </html>
