--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       </a-camera>
 
      <a-sky src="#panorama"></a-sky>
-
+     <a-sphere
+     	position="-1 3 -1";
+     	radius="0.05";
+     	color= "#FFFFFF";>
+     </a-sphere>
 
 
     </a-scene>
