--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
      <a-sky src="#panorama"></a-sky>
      <a-sphere
-     	position="-9.1 3.3 4.7";
-     	radius="0.3";
+     	position="-9.1 3.4 4.5";
+     	radius="0.4";
+     	opacity="70"
      	color= "#FFFFFF";>
      </a-sphere>
 
