--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
      <a-sky src="#panorama"></a-sky>
      <a-sphere
-     	position="-9.1 3.4 4.5";
-     	radius="0.4";
-     	opacity="70"
-     	color= "#FFFFFF";>
+     	position="-9.1 4 4.5";
+     	radius="1";
+     	opacity="30";
+     	color= "#FFD931";>
      </a-sphere>
 
 
