--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
      <a-sky src="#panorama"></a-sky>
      <a-sphere
      	position="-9.1 4 4.5";
-     	radius="1";
-     	opacity="30";
+     	radius="0.75";
+     	opacity="30%";
      	color= "#FFD931";>
      </a-sphere>
 
