--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
      <a-sky src="#panorama"></a-sky>
      <a-sphere
-     	position="-9.1 4 4.5";
-     	radius="0.75";
-     	opacity="30%";
-     	color= "#FFD931";>
+     	position="-9.1 3.8 4.5";
+     	radius="0.65";
+     	
+     	color= "#FFD931";
+opacity="30%";
+     	>
      </a-sphere>
 
 
