--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
      <a-sky src="#panorama"></a-sky>
      <a-sphere
-     	position="-9.1 3.8 4.5";
-     	radius="0.3";
+     	position="-9.1 3.8 4.45";
+     	radius="0.65";
      	
      	color= "#FFD931";
-opacity="30%";
+opacity="0.3";
      	>
      </a-sphere>
 
