--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
      <a-sky src="#panorama"></a-sky>
      <a-sphere
-     	position="-9.1 3.8 4.43";
-     	radius="0.65";
+     	position="-9.1 3.76 4.43";
+     	radius="0.6";
      	
-     	color= "#FFD931";
+     	color= "#ffff00";
 opacity="0.5";
      	>
      </a-sphere>
