--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a-scene >
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
+          <img id="volcano" src="images/volcano.png"/>
            </a-assets>
         
          <a-camera >  
@@ -31,11 +32,15 @@
      	radius="0.55";
      	
      	color= "#ffff00";
-opacity="0.6";
-     	>
+        opacity="0.6";>
      </a-sphere>
-
+     <a-image 
+     src="#volcano";
+     width="4.1"
+     heigh="1.2"
+     position="-8.5.1 4.8 4.2">
 
     </a-scene>
+
   </body>
 </html>
