--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a-scene >
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
+          <img id="volcano" src="images/volcano.png"/>
            </a-assets>
         
          <a-camera >  
@@ -33,6 +34,13 @@
      	color= "#ffff00";
         opacity="0.6";>
      </a-sphere>
+
+     <a-image
+     src="#volcano";
+     width = "6.2"
+     heigh= "2";
+     position="-8 4.8 4.2";
+     rotation="0 0 0"> </a-image>
     </a-scene>
 
   </body>
