--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
      <a-image
      src="#volcano";
-     width = "5.2"
+     width = "3.2"
      heigh= "8";
-     position="-2 2 0";
+     position="-2 4S 0";
      rotation="0 100 0"> </a-image>
     </a-scene>
 
