--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
      <a-image
      src="#volcano";
-     width = "3.2"
+     width = "2.2"
      heigh= "8";
-     position="-2 4S 0";
-     rotation="0 100 0"> </a-image>
+     position="-2 3 0";
+     rotation="0 70 0"> </a-image>
     </a-scene>
 
   </body>
