--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         opacity="0.6";>
      </a-sphere>
 
-     <a-image
+     <a-image id="volcano2"
      src="#volcano";
      width = "2.4"
      heigh= "8.75";
-     position="-2 2.6 -0.4";
+     position="-2 2.6 -0.45";
      rotation="10 110 0"> </a-image>
     </a-scene>
 
