--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
+
+    <style>
+#volcano2 {
+  display: none;
+}
+</style>
   </head>
   <body>
   <a-scene >
