--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
 
-    <style>
-#volcano2 {
+    <style src="#volcano2" {
   display: none;
-}
+}>
 </style>
   </head>
   <body>
