--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
 
-    <style src="#volcano2" {
-  display: none;
+    <style src="#volcano2" 
+  display= "none";
 }>
 </style>
   </head>
