--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
-<script src ="styles/style.css"></script>
+<script src ="styles/style.css" defer></script>
   
   </head>
   <body>
