--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         opacity="0.6";>
      </a-sphere>
 
-     <a-image id="volcano2"
+     <div id="volcano2"><a-image id="volcano2"
      src="#volcano";
      width = "2.4"
      heigh= "8.75";
      position="-2 2.6 -0.45";
-     rotation="10 110 0"> </a-image>
+     rotation="10 110 0"> </a-image></div>
     </a-scene>
 
   </body>
