--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </a-camera>
 
      <a-sky src="#panorama"></a-sky>
-     <a-sphere
+     <a-sphere onclick="myFunction()"
      	position="-9.1 3.8 4.35";
      	radius="0.55";
      	
