--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
       </a-camera>
 
      <a-sky src="#panorama"></a-sky>
-     <a-sphere onclick="myFunction()"
+     <a-sphere 
      	position="-9.1 3.8 4.35";
      	radius="0.55";
-     	
      	color= "#ffff00";
         opacity="0.6";>
      </a-sphere>
