--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         opacity="0.6";>
      </a-sphere>
 
-     <div id="volcano2"><a-image id="volcano2"
+     <div id="volcano2"><a-image
      src="#volcano";
      width = "2.4"
      heigh= "8.75";
