--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
      width = "2.4"
      heigh= "8.75";
      position="-2 2.6 -0.45";
-     rotation="10 110 0"> </a-image></div>
+     rotation="10 110 0";
+     transparent = "false"> </a-image></div>
     </a-scene>
 
   </body>
