--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         opacity="0.6";>
      </a-sphere>
 
-     <div id="volcano2"><a-image
+     <a-image id="volcano2"
      src="#volcano";
      width = "2.4"
      heigh= "8.75";
      position="-2 2.6 -0.45";
      rotation="10 110 0";
-     transparent = "true"> </a-image></div>
+     transparent = "true"> </a-image>
     </a-scene>
 
   </body>
