--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      heigh= "8.75";
      position="-2 2.6 -0.45";
      rotation="10 110 0";
-     transparent = "false"> </a-image>
+     transparent = "true"> </a-image>
     </a-scene>
 
   </body>
