--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </a-camera>
 
      <a-sky src="#panorama"></a-sky>
+     
      <a-sphere 
      	position="-9.1 3.8 4.35";
      	radius="0.55";
@@ -37,12 +38,13 @@
      </a-sphere>
 
      <a-image id="volcano2"
+     visible="false";
      src="#volcano";
      width = "2.4"
      heigh= "8.75";
      position="-2 2.6 -0.45";
      rotation="10 110 0";
-     transparent = "true"> </a-image>
+    > </a-image>
     </a-scene>
 
   </body>
