--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
      heigh= "8.75";
      position="-2 2.6 -0.45";
      rotation="10 110 0";
+     animation="property: visible;
+     to: true;
+     startEvents: click;"
     > </a-image>
     </a-scene>
 
