--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
      <a-sky src="#panorama"></a-sky>
      
-     <a-sphere 
+     <a-sphere id="sphere"
      	position="-9.1 3.8 4.35";
      	radius="0.55";
      	color= "#ffff00";
@@ -44,10 +44,10 @@
      heigh= "8.75";
      position="-2 2.6 -0.45";
      rotation="10 110 0";
+    > </a-image>
      animation="property: visible;
      to: true;
      startEvents: click;"
-    > </a-image>
     </a-scene>
 
   </body>
