--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
      rotation="10 110 0";
     > </a-image>
 
-    </a-scene>
+         <a-sphere id="sphere2"
+     	position="1 1 1";
+     	radius="0.55";
+     	color= "#ffff00";
+        opacity="0.6";>
+     </a-sphere>
 
+    </a-scene>
   </body>
 </html>
