--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
      rotation="10 110 0";
     > </a-image>
 
-         <a-sphere id="sphere2"
-     	position="0.7 1.3 2";
-     	radius="0.10";
-     	color= "#ffff00";
-        opacity="0.8";>
-     </a-sphere>
+<a-sphere id="sphere2"
+position = "0.7 1.3 2";
+radius = "0.1";
+color ="#ffff00";
+opacity ="0.8";
+> </a-sphere>
 
     </a-scene>
   </body>
