--- a/index.html
+++ b/index.html
@@ -46,12 +46,19 @@
      rotation="10 110 0";
     > </a-image>
 
-<a-sphere id="sphere2"
-position = "0.7 1.3 2";
+<a-sphere id ="sphere2"
+position = "0.7 1.1 2";
 radius = "0.1";
 color ="#ffff00";
-opacity ="0.8";
+opacity ="0.85";
 > </a-sphere>
+
+
+  <a-plane src="#ground" 
+  height="100" 
+  width="100"
+   rotation="-90 0 0">
+   </a-plane>
 
     </a-scene>
   </body>
