--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
     > </a-image>
 
 <a-sphere id ="sphere2"
-position = "0.7 1.1 2";
+position = "0.7 1.2 2";
 radius = "0.1";
 color ="#ffff00";
-opacity ="0.85";
+opacity ="0.8";
 > </a-sphere>
 
 
   <a-plane src="#ground" 
-  height="100" 
-  width="100"
+  position = "0.7 1 2"
+  height="10" 
+  width="10"
    rotation="-90 0 0">
    </a-plane>
 
