--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ opacity ="0.75";
 
 
   <a-plane src="#ground" 
-  position = "0.7 1.3 2"
-  height="3" 
-  width="6"
+  position = "0.7 1.3 2";
+  height="3" ;
+  width="6";
    rotation="-90 0 0";
    opacity = "0.5">
    </a-plane>
