--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/>
+          <img id="field" src="images/runtrack/png"/>
            </a-assets>
         
          <a-camera >  
@@ -55,6 +56,7 @@ opacity ="0.75";
 
 
   <a-plane src="#ground" 
+  material="src: #field";
   position = "0.8 1.3 2.2";
   height="2.7" ;
   width="4.2";
