--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ opacity ="0.75";
 > </a-sphere>
 
 
-  <a-plane  
+  <a-plane  id="field"
   material="src: #field";
   position = "0.8 1.3 2.2";
   height="2.7" ;
   width="4.2";
    rotation="-90 20 0";
-   opacity = "0.5">
+ >
    </a-plane>
 
     </a-scene>
