--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ opacity ="0.75";
 > </a-sphere>
 
 
-  <a-plane  id="field"
+  <a-plane  id="run"
   material="src: #field";
   position = "0.8 1.3 2.2";
   height="2.7" ;
