--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@ opacity ="0.75";
    position = "0.8 1.3 2.2";
    height="2.7" ;
    width="4.2";
-   rotation="90 20 0";
-   material="src: #field";
- >
+   rotation="-90 20 0";
+   material="src: #field">
    </a-plane>
     </a-scene>
   </body>
