--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
-<link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   
   </head>
   <body>
@@ -15,7 +15,7 @@
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/>
-          <img id="field" src="images/runtrack/jpg"/>
+          <img id="field" src="images/runtrack.jpg"/>
            </a-assets>
         
          <a-camera >  
