--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@ opacity ="0.75";
 > </a-sphere>
 
 
-  <a-plane  id="run"
+  <a-image  id="run"
+  src= "field"
    position = "0.8 1.3 2.2";
    height="2.7" ;
    width="4.2";
-   rotation="-90 20 0";
-   material="src: #field">
-   </a-plane>
+   rotation="-90 20 0"
+   >
+   </a-image>
     </a-scene>
   </body>
 </html>
