--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ opacity ="0.75";
 
 
   <a-image  id="run"
-  src= "field"
+  src= "field";
    position = "0.8 1.3 2.2";
    height="2.7" ;
    width="4.2";
