--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/>
-          <img id="field" src="images/runtrack.jpg"/>
+          <img id="field" src="images/runtrack.png"/>
            </a-assets>
         
          <a-camera >  
@@ -55,14 +55,13 @@ opacity ="0.75";
 > </a-sphere>
 
 
-  <a-image  id="run"
-  src= "field";
+  <a-plane  id="run"
    position = "0.8 1.3 2.2";
    height="2.7" ;
    width="4.2";
-   rotation="-90 20 0"
-   >
-   </a-image>
+   rotation="-90 20 0";
+   material="src: #field">
+   </a-plane>
     </a-scene>
   </body>
 </html>
