--- a/index.html
+++ b/index.html
@@ -57,10 +57,22 @@ opacity ="0.75";
 
   <a-plane  id="run"
    position = "0.8 1.3 2.2";
-   height="2.7" ;
-   width="4.2";
    rotation="-90 20 0";
-   material="src: #field">
+   material="src: #field"
+   animation__1="property:height;
+       to: 2.7;
+       dur: 3000;
+       easing: linear;
+       loop:false;
+       delay: 2000;"
+    animation__2="property:width;
+       to: 4.2;
+       dur: 3000;
+       easing: linear;
+       loop:false;
+       delay: 2000;"
+       >height="2.7" ;
+   width="4.2";
    </a-plane>
     </a-scene>
   </body>
