--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ opacity ="0.75";
 
 
   <a-plane  id="run"
+  visible ="false";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
    material="src: #field"
@@ -63,16 +64,13 @@ opacity ="0.75";
        to: 2.7;
        dur: 3000;
        easing: linear;
-       loop:false;
-       delay: 2000;"
+       loop:false;"
     animation__2="property:width;
        to: 4.2;
        dur: 3000;
        easing: linear;
-       loop:false;
-       delay: 2000;"
-       >height="2.7" ;
-   width="4.2";
+       loop:false;"
+       >
    </a-plane>
     </a-scene>
   </body>
