--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@ opacity ="0.75";
        to: 2.7;
        dur: 3000;
        easing: linear;
-       loop:false;"
+       loop:true;"
     animation__2="property:width;
        to: 4.2;
        dur: 3000;
        easing: linear;
-       loop:false;"
+       loop:true;"
        >
    </a-plane>
     </a-scene>
