--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@ opacity ="0.75";
    material="src: #field"
    animation__1="property:height;
        to: 2.7;
-       dur: 3000;
+       dur: 5000;
        easing: linear;
-       loop:true;"
+       startEvents: mouseenter;
+       loop:false;"
     animation__2="property:width;
        to: 4.2;
-       dur: 3000;
+       dur: 5000;
        easing: linear;
-       loop:true;"
+       startEvents: mouseenter;
+       loop:false;"
        >
    </a-plane>
     </a-scene>
