--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <meta charset="utf-8">
     <title>Challenge 1 </title>
     <meta name="viewport" content="width=device-width">
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <!--script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>-->
     <script src="scripts/main.js" defer></script>
+     <script src="scripts/aframe.min.js" defer></script>
     <link rel="stylesheet" href="styles/style.css" />
   
   </head>
@@ -61,16 +62,18 @@ opacity ="0.75";
    rotation="-90 20 0";
    material="src: #field"
    animation__1="property:height;
+   startEvents: mouseenter;
        to: 2.7;
        dur: 5001;
        easing: linear;
-       startEvents: mouseenter;
+       
        loop:false;"
     animation__2="property:width;
+    startEvents: mouseenter;
        to: 4.2;
        dur: 5000;
        easing: linear;
-       startEvents: mouseenter;
+       
        loop:false;"
        >
    </a-plane>
