--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
     <title>Challenge 1 </title>
     <meta name="viewport" content="width=device-width">
-    <!--script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>-->
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
-     <script src="scripts/aframe.min.js" defer></script>
+
     <link rel="stylesheet" href="styles/style.css" />
   
   </head>
