--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@ opacity ="0.75";
   visible ="false";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
-   material="src: #field"
+   material="src: #field";
    animation__1="property:height;
        to: 2.7;
        dur: 5001;
        easing: linear;
-       loop:false;"
+       loop:true;"
     animation__2="property:width;
       to: 4.2;
        dur: 5000;
        easing: linear;
-       loop:false;"
+       loop:true;"
        >
    </a-plane>
     </a-scene>
