--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ opacity ="0.75";
        to: 2.7;
        dur: 5001;
        easing: linear;
-       loop:false;"
+       loop:1;"
     animation__2="property:width;
       to: 4.2;
        dur: 5000;
        easing: linear;
-       loop:false;"
+       loop:1;"
        >
    </a-plane>
     </a-scene>
