--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@ opacity ="0.75";
    rotation="-90 20 0";
    material="src: #field";
    animation__1="property:height;
+       startEvents: mouseenter;
        to: 2.7;
        dur: 5001;
        easing: linear;
        loop:1;"
     animation__2="property:width;
-      to: 4.2;
+       startEvents: mouseenter;
+       to: 4.2;
        dur: 5000;
        easing: linear;
        loop:1;"
