--- a/index.html
+++ b/index.html
@@ -66,13 +66,15 @@ opacity ="0.75";
        to: 2.7;
        dur: 5001;
        easing: linear;
-       loop:1;"
+       loop:1;
+       delay: 2000;"
     animation__2="property:width;
        startEvents: mouseenter;
        to: 4.2;
        dur: 5000;
        easing: linear;
-       loop:1;"
+       loop:1
+       delay: 2000;"
        >
    </a-plane>
     </a-scene>
