--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ opacity ="0.75";
    rotation="-90 20 0";
    material="src: #field";
    animation__1="property:height;
+       from: 0;
        to: 2.7;
        dur: 3000;
        easing: linear;
@@ -69,11 +70,12 @@ opacity ="0.75";
        loop:1;
        delay: 4000;"
     animation__2="property:width;
+       from: 0;
        to: 4.2;
        dur: 3000;
        startEvents: mouseenter;
        easing: linear;
-       loop:1
+       loop:1;
        delay: 4000;"
        >
    </a-plane>
