--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ opacity ="0.75";
        dur: 3000;
        easing: linear;
        startEvents: mouseenter;
-       loop:1;
+       loop:false;
        delay: 4000;"
     animation__2="property:width;
        from: 0;
@@ -75,7 +75,7 @@ opacity ="0.75";
        dur: 3000;
        startEvents: mouseenter;
        easing: linear;
-       loop:1;
+       loop:false;
        delay: 4000;"
        >
    </a-plane>
