--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ color ="#ffff00";
 opacity ="0.75";
 > </a-sphere>
 
- visible ="false"; 
+ 
   <a-plane  id="run"
-  
+   width="0"; 
+   heigh = "0";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
    material="src: #field";
