--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ opacity ="0.75";
    heigh = "0";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
-   material="src: #field";
+   material="src: #field";>
    animation__1="property:height;
        from: 0;
        to: 2.7;
