--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ opacity ="0.75";
   <a-plane  id="run"
    width="0"; 
    heigh = "0";
+   depth = "0";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
    material="src: #field";
