--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@ opacity ="0.75";
 
  
   <a-plane  id="run"
-   width="-0.5"; 
-   heigh = "-0.5";
+  visible = false
+   width="4.2"; 
+   heigh = "2.7";
    position = "0.8 1.3 2.2";
    rotation="-90 20 0";
-   material="src: #field";
+   material="src: #field"; >
    animation__1="property:height;
        from: -1;
        to: 2.7;
@@ -78,7 +79,7 @@ opacity ="0.75";
        easing: linear;
        loop:false;
        delay: 4000;"
-       >
+      
    </a-plane>
     </a-scene>
   </body>
