--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ opacity ="0.75";
  
   <a-plane  id="run"
   visible = false
-   width="7"; 
-   heigh = "4.5";
+   width="0"; 
+   heigh = "0";
    position = "0.65 1.4 1.2";
    rotation="-120 20 0";
-   material="src: #field"; >
+   material="src: #field"; 
    animation__1="property:height;
        from: -1;
        to: 2.7;
@@ -70,7 +70,7 @@ opacity ="0.75";
        easing: linear;
        startEvents: mouseenter;
        loop:false;
-       delay: 4000;"
+       delay: 2000;"
     animation__2="property:width;
        from: -1;
        to: 4.2;
@@ -78,7 +78,7 @@ opacity ="0.75";
        startEvents: mouseenter;
        easing: linear;
        loop:false;
-       delay: 4000;"
+       delay: 2000;">
       
    </a-plane>
     </a-scene>
