--- a/index.html
+++ b/index.html
@@ -65,22 +65,20 @@ opacity ="0.75";
    material="src: #field"; 
    animation__1="property:height;
        from: -1;
-       to: 2.7;
+       to: 4.5;
        dur: 3000;
        easing: linear;
-       startEvents: mouseenter;
        loop:false;
-       delay: 2000;"
+       delay: 4000;"
     animation__2="property:width;
        from: -1;
-       to: 4.2;
+       to: 7;
        dur: 3000;
-       startEvents: mouseenter;
        easing: linear;
        loop:false;
-       delay: 2000;">
+       delay: 4000;">
       
-   </a-plane>
+   </a-plane>startEvents: mouseenter;
     </a-scene>
   </body>
 </html>
