--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@ opacity ="0.75";
        to: 4.5;
        dur: 3000;
        easing: linear;
-       loop:false;
-       delay: 4000;"
+       loop:true;
+       delay: 2000;"
     animation__2="property:width;
        from: -1;
        to: 7;
        dur: 3000;
        easing: linear;
-       loop:false;
-       delay: 4000;">
+       loop:true;
+       delay: 2000;">
       
    </a-plane>startEvents: mouseenter;
     </a-scene>
