--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ opacity ="0.75";
        to: 2.7;
        dur: 3000;
        easing: linear;
-       loop:true;
+       loop:false;
        delay: 2000;"
     animation__2="property:width;
        from: 0;
        to: 4.2;
        dur: 3000;
        easing: linear;
-       loop:true;
+       loop:false;
        delay: 2000;">
       
    </a-plane>startEvents: mouseenter;
