--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ opacity ="0.75";
 
  
   <a-plane  id="run"
-  visible = "true";
+  visible = "false";
    width="0"; 
    heigh = "0";
    position = "0.8 1.3 2.2";
