--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ opacity ="0.75";
   visible = "false";
    width="0"; 
    heigh = "0";
-   position = "0.8 1.3 2.2";
+   position = "0.8 0.8 2.2";
    rotation="-90 20 0";
    material="src: #field"; 
    animation__1="property:height;
@@ -73,6 +73,13 @@ opacity ="0.75";
     animation__2="property:width;
        from: 0;
        to: 4.2;
+       dur: 3000;
+       easing: linear;
+       loop:false;
+       delay: 2000;"
+     animation__3="property:position;
+       from: 0.8 0.8 2.2;
+       to: 0.8 1.3 2.2;
        dur: 3000;
        easing: linear;
        loop:false;
