--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ opacity ="0.75";
        to: 0.8 1.3 2.2;
        dur: 3000;
        easing: linear;
-       loop:false;
+       loop:true;
        delay: 2000;">
       
    </a-plane>startEvents: mouseenter;
