--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@ opacity ="0.75";
        to: 2.7;
        dur: 5000;
        easing: linear;
-       loop:false;
+       loop:true;
        delay: 2000;"
     animation__2="property:width;
        from: 0;
        to: 4.2;
        dur: 5000;
        easing: linear;
-       loop:false;
+       loop:true;
        delay: 2000;"
      animation__3="property:position;
        from: 0.8 0.8 2.2;
