--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/>
-          <img id="field" src="images/runtrack.png"/>
+          <img id="field" src="images/RUN.png"/>
            </a-assets>
         
          <a-camera >  
