--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ opacity ="0.75";
    position = "0.8 0.8 2.2";
    rotation="-90 20 0";
    material="src: #field"; 
-   material="alphaTest: 0.5">
+   material="alphaTest: 0.5"
    animation__1="property:height;
        from: 0;
        to: 2.7;
