--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ opacity ="0.75";
    heigh = "0";
    position = "0.8 0.8 2.2";
    rotation="-90 20 0";
+   transparent="true";
    material="src: #field"; 
    animation__1="property:height;
        from: 0;
