--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ opacity ="0.75";
     rotation = "-90 20 0";
     transparent = "true";
     material = "src: #field";
-    >
+    ></a-plane>
     </a-scene>
   </body>
 </html>
