--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
-          <img id="field" src="images/RUN.png"/>
+          <img id = "field" src = "images/RUN.png">
           </a-assets>
         
          <a-camera >  
@@ -54,17 +54,38 @@ radius = "0.1";
 color ="#ffff00";
 opacity ="0.75";
 > </a-sphere>
-    
+   
 
-    <a-plane id ="run"
-    visible="true";
-    width="4.2";
-    height = "2.7";
-    position = "0.8 0.8 2.2"
-    rotation = "-90 20 0";
-    transparent = "true";
-    material = "src: #field";
-    ></a-plane>
+   <a-plane id="run";
+   visib;e = "true";
+   width = "0";
+   height = "0";
+   position = " 0.8 0.8 2.2";
+   rotation = "-90 20 0";
+   transparent = "true"
+   materual = " src:#field";
+   animation__1="property:height;
+   from:0;
+   to:2.7;
+   dur:4000;
+   easing:linear;
+   loop:true;
+   delay:0;"
+   animation__2="property:width;
+   from:0;
+   to:4.2;
+   dur:4000;
+   easing:linear;
+   loop:true;
+   delay:0;"
+   animation__3="property:position;
+   from: 0.8 1.21 2.2;
+   to:0.8 1.3 2.2;
+   dur:4000;
+   easing:linear;
+   loop:true;
+   delay:0;"
+   ></a-plane>
     </a-scene>
   </body>
 </html>
