--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ opacity ="0.75";
    
 
    <a-plane id="run";
-   visib;e = "true";
+   visible = "true";
    width = "0";
    height = "0";
    position = " 0.8 0.8 2.2";
    rotation = "-90 20 0";
    transparent = "true"
-   materual = " src:#field";
+   material = " src:#field";
    animation__1="property:height;
    from:0;
    to:2.7;
