--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
   <a-scene >
+
   	      <a-assets>
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
@@ -85,7 +86,10 @@ opacity ="0.75";
    easing:linear;
    loop:true;
    delay:0;"
-   ></a-plane>
+   >
+   	
+   </a-plane>
+    
     </a-scene>
   </body>
 </html>
