--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
-           <video id="video" autoplay loop="true" src="images/video.mp4"></video>
+           <video id="video" autoplay loop="true" src="video/video.mp4"></video>
           </a-assets>
         
          <a-camera >  
