--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/style.css" />
-  
+  <script>
+  UPLOADCARE_PUBLIC_KEY = '241f5f4aa7721aac4b09';
+</script>
+
+<script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
   </head>
   <body>
   <a-scene >
