--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </script>
 
 <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
+<style>
+  .uploader-button .uploadcare--widget__button_type_open {
+    background-color: #373737;
+  }
+</style>
+
+<script>
+  UPLOADCARE_LOCALE_TRANSLATIONS = {
+    buttons: {
+      choose: {
+        files: {
+          one: 'Upload image'
+        }
+      }
+    }
+  }
+</script>
   </head>
   <body>
   <a-scene >
