--- a/index.html
+++ b/index.html
@@ -8,28 +8,10 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/style.css" />
-  <script>
-  UPLOADCARE_PUBLIC_KEY = '241f5f4aa7721aac4b09';
-</script>
+  <script> UPLOADCARE_PUBLIC_KEY = '241f5f4aa7721aac4b09';</script>
 
 <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
-<style>
-  .uploader-button .uploadcare--widget__button_type_open {
-    background-color: #373737;
-  }
-</style>
 
-<script>
-  UPLOADCARE_LOCALE_TRANSLATIONS = {
-    buttons: {
-      choose: {
-        files: {
-          one: 'Upload image'
-        }
-      }
-    }
-  }
-</script>
   </head>
   <body>
   <a-scene >
@@ -38,7 +20,7 @@
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
-           <video id="video" autoplay loop="true" src="https://www.youtube.com/watch?v=gCfIOkczpY0"></video>
+           <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4"></video>
           </a-assets>
         
          <a-camera >  
