--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@ opacity ="0.75";
    	
    </a-plane>
 
-    <a-plane id="video2";
+    </a-videosphere id="video2";
    visible = "true";
    width = "3";
    height = "1.5";
    position = " 0.8 1 2.2";
    rotation = "0 20 0";
    material = " src:#video";
-   ></a-plane>
+   ></a-videosphere>
     
     </a-scene>
   </body>
