--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ opacity ="0.75";
    	
    </a-plane>
 
-    </a-videosphere id="video2";
+    <a-videosphere id="video2";
    visible = "true";
    width = "3";
    height = "1.5";
