--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ opacity ="0.75";
    height = "1.5";
    position = " 0.8 1 2.2";
    rotation = "0 20 0";
-   material = " src:#video";
+   src = "#video";
    ></a-videosphere>
     
     </a-scene>
