--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
-           <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous"></video>
+           <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous" muted="true"></video>
           </a-assets>
         
          <a-camera >  
