--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
            <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous" muted="true"></video>
           </a-assets>
-   <a-entity raycaster="objects:.video2; run; far:5">
+   <a-entity raycaster="objects:.video2; .run; far:5">
      <a-plane id="video2";
    visible = "true";
    width = "3";
