--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <img id = "field" src = "images/RUN.png">
 
 
-           <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous" muted="true"></video>
+           <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous" muted="true" autoplay="true" loop="true"></video>
           </a-assets>
-   <a-entity raycaster="objects:.video2; .run; far:5">
+   
      <a-plane id="video2";
    visible = "true";
    width = "1.5";
@@ -33,7 +33,7 @@
    rotation = "0 20 0";
    material = "src:#video";
    ></a-plane> 
-</a-entity>
+a-entity raycaster="objects:.video2; .run; far:5"></==a-entity>
 
 
          <a-camera >  
