--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <img id="panorama" src="images/pano.jpg" />
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
+          <img id = "playbutton" src="images/play.png">
 
 
            <video id="video" autoplay loop="true" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" crossorigin="anonymous" muted="true" autoplay="true" loop="true"></video>
@@ -107,6 +108,15 @@ opacity ="0.75";
    	
    </a-plane>
 
+
+ <a-image id="play"
+     src="#playbutton";
+     visible="true";
+     width = "1"
+     heigh= "1";
+     position="0.6 0.8 2";
+     rotation="10 110 0";
+    > </a-image>
   
     
     </a-scene>
