--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
    rotation = "0 -50 0";
    material = "src:#video";
    ></a-plane> 
-a-entity raycaster="objects:.video2; .run; far:5"></==a-entity>
 
 
          <a-camera >  
@@ -114,9 +113,18 @@ opacity ="0.75";
      visible="true";
      width = "1"
      heigh= "1";
-     position="0.6 0.8 2";
-     rotation="10 110 0";
+     position="0.6 1 2";
+     rotation="0 0 0";
     > </a-image>
+
+        <a-plane id="video2";
+   visible = "true";
+   width = "3";
+   height = "1.5";
+   position = " 10 1 -5";
+   rotation = "0 -70 0";
+   material = "src:#video";
+   ></a-plane> 
   
     
     </a-scene>
