--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ opacity ="0.75";
    material = "src:#video";
    > 
         <a-plane id="video2";
-   visible = "true";
+   visible = "false";
    width = "3";
    height = "1.5";
    position = " 0.85 2.2 2.5";
@@ -113,9 +113,9 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
-   <a-image id="play"
+   <a-image id="buttonplay"
      src="#playbutton";
-     visible="true";
+     visible="false";
      width = "0.05"
      heigh= "0.2";
      position="0.6 2 2";
