--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@ opacity ="0.75";
      heigh= "0.05";
      position="0.6 2 2";
      rotation="0 0 180";
+     animation__4="property:visible;
+     from:false;
+     to:true;
+     delay:2000;
+     easing:linear;
+     "
     > </a-image>
     
     </a-scene>
