--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
           <img id = "playbutton" src="images/play.png">
+          <video id="video" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4"
+          crossorigin="anonymous" muted="true" autoplay="true" loop="true"/>
           </a-assets>
 
          <a-camera >  
@@ -92,6 +94,17 @@ opacity ="0.75";
    delay:0;"
    >
     
+
+    <a-plane id="video2";
+    visible="true";
+    width="3";
+    height="1.5";
+    position="0.82 2.2 2.5";
+    rotation="0 -160 0";
+    material="src:#video";
+    > </a-plane>
+    
+
     </a-scene>
   </body>
 </html>
