--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           <img id="volcano" src="images/volcano.png"/> 
           <img id = "field" src = "images/RUN.png">
           <img id = "playbutton" src="images/play.png">
-          <video id="video" src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4"
-          crossorigin="anonymous" muted="true" autoplay="true" loop="true"/>
+         <video id="video" autoplay loop="true" 
+          src="https://ucarecdn.com/3916a2b2-cce2-4874-88c9-cdd66847b54b/video.mp4" 
+          crossorigin="anonymous" muted="true" autoplay="true" loop="true"></video>
           </a-assets>
 
          <a-camera >  
