--- a/index.html
+++ b/index.html
@@ -94,7 +94,16 @@ opacity ="0.75";
    loop:true;
    delay:0;"
    >
-
+   	
+   </a-plane>
+  a-plane id="video2";
+   visible = "true";
+   width = "3";
+   height = "1.5";
+   position = " 10 1 -5";
+   rotation = "0 -50 0";
+   material = "src:#video";
+   > 
         <a-plane id="video2";
    visible = "false";
    width = "3";
