--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ opacity ="0.75";
    material = "src:#video";
    > 
         <a-plane id="video2";
-   visible = "false";
+   visible = "true";
    width = "3";
    height = "1.5";
    position = " 0.82 2.2 2.5";
@@ -113,7 +113,16 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
-   <a-image id="buttonplay"
+ 
+    </a-scene>
+  </body>
+</html> 
+
+
+
+
+
+ a-image id="buttonplay"
      src="#playbutton";
      visible="false";
      width = "0.8"
@@ -122,6 +131,3 @@ opacity ="0.75";
      rotation="0 0 180";
     > </a-image>
     
-    </a-scene>
-  </body>
-</html>
