--- a/index.html
+++ b/index.html
@@ -95,16 +95,7 @@ opacity ="0.75";
    delay:0;"
    >
    	
-   </a-plane>
-  a-plane id="video2";
-   visible = "true";
-   width = "3";
-   height = "1.5";
-   position = " 10 1 -5";
-   rotation = "0 -50 0";
-   material = "src:#video";
-   > 
-        <a-plane id="video2";
+   <a-plane id="video2";
    visible = "true";
    width = "3";
    height = "1.5";
@@ -113,10 +104,35 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
+
+     <a-image id="buttonplay"
+     src="#playbutton";
+     visible="false";
+     width = "0.8"
+     heigh= "0.05";
+     position="0.65 2 2";
+     rotation="0 0 180";
+    > </a-image>
+    
+
  
     </a-scene>
   </body>
 </html> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
