--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ opacity ="0.75";
 
      <a-image id="buttonplay"
      src="#playbutton";
-     visible="false";
+     visible="true";
      width = "0.8"
      heigh= "0.05";
      position="0.65 2 2";
