--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
-   <a-image id="buttonplay"
+   <a-image id="buttonplay";
      src="#playbutton";
      visible="false";
      width = "0.8"
@@ -117,30 +117,3 @@ opacity ="0.75";
   </body>
 </html> 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- a-image id="buttonplay"
-     src="#playbutton";
-     visible="false";
-     width = "0.8"
-     heigh= "0.05";
-     position="0.65 2 2";
-     rotation="0 0 180";
-    > </a-image>
-    
