--- a/index.html
+++ b/index.html
@@ -103,7 +103,14 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
-   <a-image id="buttonplay";
+ 
+
+ 
+    </a-scene>
+  </body>
+</html> 
+
+  a-image id="buttonplay";
      src="#playbutton";
      visible="false";
      width = "0.8"
@@ -111,9 +118,3 @@ opacity ="0.75";
      position="0.65 2.5 2";
      rotation="0 0 180";
     > </a-image>
-
- 
-    </a-scene>
-  </body>
-</html> 
-
