--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ opacity ="0.75";
    >
    	
          <a-plane id="video2";
-   visible = "false";
+   visible = "true";
    width = "3";
    height = "1.5";
    position = " 0.82 2.5 3";
@@ -103,18 +103,17 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
- 
+   <a-image id="buttonplay";
+     src="#playbutton";
+     visible="true";
+     width = "0.8"
+     heigh= "0.05";
+     position="0.65 2 2";
+     rotation="0 0 180";
+    > </a-image>
 
  
     </a-scene>
   </body>
 </html> 
 
-  a-image id="buttonplay";
-     src="#playbutton";
-     visible="false";
-     width = "0.8"
-     heigh= "0.05";
-     position="0.65 2.5 2";
-     rotation="0 0 180";
-    > </a-image>
