--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@ opacity ="0.75";
    delay:0;"
    >
    	
-         <a-plane id="video2";
+     
+ 
+    </a-scene>
+  </body>
+</html>  
+   a-plane id="video2";
    visible = "true";
    width = "3";
    height = "1.5";
@@ -103,12 +108,6 @@ opacity ="0.75";
    material = "src:#video";
    ></a-plane> 
 
-  
-
- 
-    </a-scene>
-  </body>
-</html> 
 
  a-image id="buttonplay";
      src="#playbutton";
