--- a/index.html
+++ b/index.html
@@ -92,28 +92,26 @@ opacity ="0.75";
    easing:linear;
    loop:true;
    delay:0;"
-   >
-   	
-     
- 
-    </a-scene>
-  </body>
-</html>  
-   a-plane id="video2";
-   visible = "true";
+   ></a-plane>
+
+          <a-plane id="video2";
+   visible = "false";
    width = "3";
    height = "1.5";
-   position = " 0.82 2.5 5";
+   position = " 0.82 2.2 2.5";
    rotation = "0 -160 0";
    material = "src:#video";
    ></a-plane> 
 
-
- a-image id="buttonplay";
+   <a-image id="buttonplay"
      src="#playbutton";
-     visible="true";
+     visible="false";
      width = "0.8"
      heigh= "0.05";
      position="0.65 2 2";
      rotation="0 0 180";
     > </a-image>
+   
+    </a-scene>
+  </body>
+</html>  
