--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ opacity ="0.75";
    ></a-plane>
 
           <a-plane id="video2";
-   visible = "true";
+   visible = "false";
    width = "3";
    height = "1.5";
    position = " 0.82 2.2 2.5";
@@ -105,7 +105,7 @@ opacity ="0.75";
 
    <a-image id="buttonplay"
      src="#playbutton";
-     visible="true";
+     visible="false";
      width = "0.8"
      heigh= "0.05";
      position="0.65 2 2";
